<?xml version="1.0"?>
<package format="2">
  <name>jp_thormang3_common_demo</name>
  <version>0.1.0</version>
  <description>
    Thormang3 JP default demo
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_demo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <!-- <exec_depend>jp_thormang3_p_manager</exec_depend> -->
  <exec_depend>ros_madplay_player</exec_depend>
  <!-- <exec_depend>face_detection</exec_depend> -->
</package>
