<?xml version="1.0"?>
<package format="2">
  <name>jp_thormang3_ppc</name>
  <version>0.0.1</version>
  <description>
    Additional ROS packages for the jp_thormang3_ppc
  </description>
  <license>Apache 2.0</license>
  <author email="yoshimaru@robotis.com">Zerom</author>
  <author>Yoshimaru Tanaka</author>
  <maintainer email="kitaijma@robotis.com">Takashi Kitajima</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_ppc</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>jp_thormang3_common_demo</exec_depend>
  <exec_depend>jp_thormang3_sensors</exec_depend>
  <export><metapackage/></export>
</package>
