<?xml version="1.0"?>
<package format="2">
  <name>jp_thormang3_sensors</name>
  <version>0.0.1</version>
  <description>
    This package contains sensor related launch files.
  </description>
  <license>Apache 2.0</license>
  <author email="yoshimaru@robotis.com">Kayman</author>
  <author>Yoshimaru Tanaka</author>
  <maintainer email="kitajima@robotis.com">Takashi Kitajima</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_sensors</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>uvc_camera</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>realsense_camera</exec_depend>
</package>
